// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tool parameters JSON Schema (wire shape) apply_patch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "patchText": {
      "description": "The full patch text that describes all changes to be made",
      "type": "string",
    },
  },
  "required": [
    "patchText",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) bash 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "The command to execute",
      "type": "string",
    },
    "description": {
      "description": 
"Clear, concise description of what this command does in 5-10 words. Examples:
Input: ls
Output: Lists files in current directory

Input: git status
Output: Shows working tree status

Input: npm install
Output: Installs package dependencies

Input: mkdir foo
Output: Creates directory 'foo'"
,
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in milliseconds",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "type": "integer",
    },
    "workdir": {
      "description": "The working directory to run the command in. Defaults to the current directory. Use this instead of 'cd' commands.",
      "type": "string",
    },
  },
  "required": [
    "command",
    "description",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_audit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Provide at least one explicit audit seed: files, filePath, symbol, or nodeID. Use chimera_audit_recent for the latest mutation.",
  "properties": {
    "depth": {
      "description": "Impact traversal depth. Defaults to 2, capped at 5.",
      "type": "number",
    },
    "filePath": {
      "description": "Single changed file to audit, absolute or project-relative.",
      "type": "string",
    },
    "files": {
      "description": "Changed files to audit, absolute or project-relative.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "kind": {
      "description": "Optional node kind filter when resolving audit seed symbols.",
      "enum": [
        "file",
        "module",
        "class",
        "struct",
        "interface",
        "trait",
        "protocol",
        "function",
        "method",
        "property",
        "field",
        "variable",
        "constant",
        "enum",
        "enum_member",
        "type_alias",
        "namespace",
        "parameter",
        "import",
        "export",
        "route",
        "component",
      ],
      "type": "string",
    },
    "limit": {
      "description": "Maximum propagation findings to return. Defaults to 30, capped at 100.",
      "type": "number",
    },
    "nodeID": {
      "description": "Exact CodeGraph node id to use as an audit seed.",
      "type": "string",
    },
    "range": {
      "description": "Optional changed source range inside filePath.",
      "properties": {
        "endColumn": {
          "description": "Optional 1-based end column within endLine.",
          "type": "number",
        },
        "endLine": {
          "description": "Optional 1-based end line for the source range. Defaults to the start line when omitted.",
          "type": "number",
        },
        "startColumn": {
          "description": "Optional 1-based start column within startLine.",
          "type": "number",
        },
        "startLine": {
          "description": "1-based start line for the source range.",
          "type": "number",
        },
      },
      "required": [
        "startLine",
      ],
      "type": "object",
    },
    "refresh": {
      "description": "Refresh CodeGraph when stale: the index is empty, watcher has pending files, or git reports dirty source files. Defaults to true.",
      "type": "boolean",
    },
    "symbol": {
      "description": "Changed symbol to audit when file/range is not precise enough.",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_audit_recent 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "limit": {
      "description": "Maximum propagation findings to return. Defaults to 30, capped at 100.",
      "type": "number",
    },
    "refresh": {
      "description": "Refresh CodeGraph when stale: the index is empty, watcher has pending files, or git reports dirty source files. Defaults to true.",
      "type": "boolean",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_file_symbols 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "File path to list indexed symbols from, absolute or project-relative.",
      "type": "string",
    },
    "kind": {
      "description": "Optional CodeGraph node kind filter.",
      "enum": [
        "file",
        "module",
        "class",
        "struct",
        "interface",
        "trait",
        "protocol",
        "function",
        "method",
        "property",
        "field",
        "variable",
        "constant",
        "enum",
        "enum_member",
        "type_alias",
        "namespace",
        "parameter",
        "import",
        "export",
        "route",
        "component",
      ],
      "type": "string",
    },
    "limit": {
      "description": "Maximum results to return. Defaults to 10, capped at 50.",
      "type": "number",
    },
    "range": {
      "description": "Optional source range inside filePath; returns intersecting symbols.",
      "properties": {
        "endColumn": {
          "description": "Optional 1-based end column within endLine.",
          "type": "number",
        },
        "endLine": {
          "description": "Optional 1-based end line for the source range. Defaults to the start line when omitted.",
          "type": "number",
        },
        "startColumn": {
          "description": "Optional 1-based start column within startLine.",
          "type": "number",
        },
        "startLine": {
          "description": "1-based start line for the source range.",
          "type": "number",
        },
      },
      "required": [
        "startLine",
      ],
      "type": "object",
    },
    "refresh": {
      "description": "Refresh CodeGraph when stale: the index is empty, watcher has pending files, or git reports dirty source files. Defaults to true.",
      "type": "boolean",
    },
  },
  "required": [
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_impact 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Provide at least one impact seed: nodeID, symbol, or filePath. Use range only with filePath.",
  "properties": {
    "depth": {
      "description": "Graph traversal depth for symbol impact. Defaults to 2, capped at 5.",
      "type": "number",
    },
    "filePath": {
      "description": "File to analyze for file-level dependents; absolute or project-relative.",
      "type": "string",
    },
    "kind": {
      "description": "Optional node kind filter when resolving symbol or range seeds.",
      "enum": [
        "file",
        "module",
        "class",
        "struct",
        "interface",
        "trait",
        "protocol",
        "function",
        "method",
        "property",
        "field",
        "variable",
        "constant",
        "enum",
        "enum_member",
        "type_alias",
        "namespace",
        "parameter",
        "import",
        "export",
        "route",
        "component",
      ],
      "type": "string",
    },
    "limit": {
      "description": "Maximum impacted symbols/files to return. Defaults to 20, capped at 100.",
      "type": "number",
    },
    "nodeID": {
      "description": "Exact CodeGraph node id to analyze.",
      "type": "string",
    },
    "range": {
      "description": "Optional source range inside filePath; seed symbols are nodes intersecting this range.",
      "properties": {
        "endColumn": {
          "description": "Optional 1-based end column within endLine.",
          "type": "number",
        },
        "endLine": {
          "description": "Optional 1-based end line for the source range. Defaults to the start line when omitted.",
          "type": "number",
        },
        "startColumn": {
          "description": "Optional 1-based start column within startLine.",
          "type": "number",
        },
        "startLine": {
          "description": "1-based start line for the source range.",
          "type": "number",
        },
      },
      "required": [
        "startLine",
      ],
      "type": "object",
    },
    "refresh": {
      "description": "Refresh CodeGraph when stale: the index is empty, watcher has pending files, or git reports dirty source files. Defaults to true.",
      "type": "boolean",
    },
    "symbol": {
      "description": "Symbol name to analyze. Used when nodeID is not supplied.",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_obligation_claim 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "obligationID": {
      "description": "Obligation id to claim.",
      "type": "string",
    },
  },
  "required": [
    "obligationID",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_obligation_ignore 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "note": {
      "description": "Optional additional context.",
      "type": "string",
    },
    "obligationID": {
      "description": "Obligation id to ignore.",
      "type": "string",
    },
    "reason": {
      "description": "Required reason for ignoring the obligation.",
      "type": "string",
    },
  },
  "required": [
    "obligationID",
    "reason",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_obligation_resolve 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "note": {
      "description": "Optional short note stating the evidence or update that resolved the obligation.",
      "type": "string",
    },
    "obligationID": {
      "description": "Obligation id to resolve.",
      "type": "string",
    },
  },
  "required": [
    "obligationID",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_obligations_list 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "limit": {
      "description": "Maximum obligations to list. Defaults to 30, capped at 100.",
      "type": "number",
    },
    "refresh": {
      "description": "Refresh CodeGraph when stale: the index is empty, watcher has pending files, or git reports dirty source files. Defaults to true.",
      "type": "boolean",
    },
    "status": {
      "description": "Optional status filter for list.",
      "enum": [
        "pending",
        "claimed",
        "resolved",
        "ignored",
        "stale",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_obligations_sync 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Provide explicit sync seeds or omit them to sync from recent mutation or git diff fallback.",
  "properties": {
    "depth": {
      "description": "Impact traversal depth for sync. Defaults to 2, capped at 5.",
      "type": "number",
    },
    "filePath": {
      "description": "Single changed file to audit and sync into obligations.",
      "type": "string",
    },
    "files": {
      "description": "Changed files to audit and sync into obligations.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "kind": {
      "description": "Optional CodeGraph node kind filter when resolving sync seed symbols.",
      "enum": [
        "file",
        "module",
        "class",
        "struct",
        "interface",
        "trait",
        "protocol",
        "function",
        "method",
        "property",
        "field",
        "variable",
        "constant",
        "enum",
        "enum_member",
        "type_alias",
        "namespace",
        "parameter",
        "import",
        "export",
        "route",
        "component",
      ],
      "type": "string",
    },
    "limit": {
      "description": "Maximum obligations to list or sync. Defaults to 30, capped at 100.",
      "type": "number",
    },
    "nodeID": {
      "description": "Exact CodeGraph node id to audit and sync into obligations.",
      "type": "string",
    },
    "range": {
      "description": "Optional changed source range inside filePath for sync.",
      "properties": {
        "endColumn": {
          "description": "Optional 1-based end column within endLine.",
          "type": "number",
        },
        "endLine": {
          "description": "Optional 1-based end line for the source range. Defaults to the start line when omitted.",
          "type": "number",
        },
        "startColumn": {
          "description": "Optional 1-based start column within startLine.",
          "type": "number",
        },
        "startLine": {
          "description": "1-based start line for the source range.",
          "type": "number",
        },
      },
      "required": [
        "startLine",
      ],
      "type": "object",
    },
    "refresh": {
      "description": "Refresh CodeGraph when stale: the index is empty, watcher has pending files, or git reports dirty source files. Defaults to true.",
      "type": "boolean",
    },
    "symbol": {
      "description": "Changed symbol to audit and sync into obligations.",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_search 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "kind": {
      "description": "Optional CodeGraph node kind filter.",
      "enum": [
        "file",
        "module",
        "class",
        "struct",
        "interface",
        "trait",
        "protocol",
        "function",
        "method",
        "property",
        "field",
        "variable",
        "constant",
        "enum",
        "enum_member",
        "type_alias",
        "namespace",
        "parameter",
        "import",
        "export",
        "route",
        "component",
      ],
      "type": "string",
    },
    "limit": {
      "description": "Maximum results to return. Defaults to 10, capped at 50.",
      "type": "number",
    },
    "query": {
      "description": "Symbol or CodeGraph-indexed text query. This is not raw literal/code-string search; use Grep for arbitrary source text.",
      "type": "string",
    },
    "refresh": {
      "description": "Refresh CodeGraph when stale: the index is empty, watcher has pending files, or git reports dirty source files. Defaults to true.",
      "type": "boolean",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) chimera_status 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "refresh": {
      "description": "Refresh CodeGraph when stale: the index is empty, watcher has pending files, or git reports dirty source files. Defaults to true.",
      "type": "boolean",
    },
  },
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) edit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "delete": {
      "description": "Delete the file. Requires edits: [] and cannot be combined with rename.",
      "type": "boolean",
    },
    "edits": {
      "description": "Hashline anchored edits to apply to one file",
      "items": {
        "properties": {
          "end": {
            "description": "Optional end Hashline anchor LINE#ID",
            "type": "string",
          },
          "lines": {
            "anyOf": [
              {
                "anyOf": [
                  {
                    "type": "string",
                  },
                  {
                    "items": {
                      "type": "string",
                    },
                    "type": "array",
                  },
                ],
              },
              {
                "type": "null",
              },
            ],
            "description": "Replacement or inserted real file lines. Do not include Hashline prefixes.",
          },
          "op": {
            "description": "Edit operation to apply",
            "enum": [
              "replace",
              "append",
              "prepend",
            ],
            "type": "string",
          },
          "pos": {
            "description": "Hashline anchor LINE#ID",
            "type": "string",
          },
        },
        "required": [
          "op",
          "lines",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "expectedFileHash": {
      "description": "Optional read-time file hash used only to report drift.",
      "type": "string",
    },
    "filePath": {
      "description": "The absolute path to the file to modify",
      "type": "string",
    },
    "rename": {
      "description": "Move the final file content to this path and remove the original path.",
      "type": "string",
    },
  },
  "required": [
    "filePath",
    "edits",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) glob 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "path": {
      "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
      "type": "string",
    },
    "pattern": {
      "description": "The glob pattern to match files against",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) grep 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "include": {
      "description": "File pattern to include in the search (e.g. "*.js", "*.{ts,tsx}")",
      "type": "string",
    },
    "path": {
      "description": "The directory to search in. Defaults to the current working directory.",
      "type": "string",
    },
    "pattern": {
      "description": "The regex pattern to search for in file contents",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) invalid 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "error": {
      "type": "string",
    },
    "tool": {
      "type": "string",
    },
  },
  "required": [
    "tool",
    "error",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lsp 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "character": {
      "description": "The character offset (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "filePath": {
      "description": "The absolute or relative path to the file",
      "type": "string",
    },
    "line": {
      "description": "The line number (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "operation": {
      "description": "The LSP operation to perform",
      "enum": [
        "goToDefinition",
        "findReferences",
        "hover",
        "documentSymbol",
        "workspaceSymbol",
        "goToImplementation",
        "prepareCallHierarchy",
        "incomingCalls",
        "outgoingCalls",
      ],
      "type": "string",
    },
    "query": {
      "description": "Search query for workspaceSymbol. Empty string requests all symbols.",
      "type": "string",
    },
  },
  "required": [
    "operation",
    "filePath",
    "line",
    "character",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) plan 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) question 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "questions": {
      "description": "Questions to ask",
      "items": {
        "properties": {
          "header": {
            "description": "Very short label (max 30 chars)",
            "type": "string",
          },
          "multiple": {
            "description": "Allow selecting multiple choices",
            "type": "boolean",
          },
          "options": {
            "description": "Available choices",
            "items": {
              "properties": {
                "description": {
                  "description": "Explanation of choice",
                  "type": "string",
                },
                "label": {
                  "description": "Display text (1-5 words, concise)",
                  "type": "string",
                },
              },
              "ref": "QuestionOption",
              "required": [
                "label",
                "description",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "question": {
            "description": "Complete question",
            "type": "string",
          },
        },
        "ref": "QuestionPrompt",
        "required": [
          "question",
          "header",
          "options",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "questions",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) read 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file or directory to read",
      "type": "string",
    },
    "limit": {
      "description": "The maximum number of lines to read (defaults to 2000)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "offset": {
      "description": "The line number to start reading from (1-indexed)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) skill 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "name": {
      "description": "The name of the skill from available_skills",
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) task 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "The command that triggered this task",
      "type": "string",
    },
    "description": {
      "description": "A short (3-5 words) description of the task",
      "type": "string",
    },
    "prompt": {
      "description": "The task for the agent to perform",
      "type": "string",
    },
    "subagent_type": {
      "description": "The type of specialized agent to use for this task",
      "type": "string",
    },
    "task_id": {
      "description": "This should only be set if you mean to resume a previous task (you can pass a prior task_id and the task will continue the same subagent session as before instead of creating a fresh one)",
      "type": "string",
    },
  },
  "required": [
    "description",
    "prompt",
    "subagent_type",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) todo 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "todos": {
      "description": "The updated todo list",
      "items": {
        "properties": {
          "content": {
            "description": "Brief description of the task",
            "type": "string",
          },
          "priority": {
            "description": "Priority level of the task: high, medium, low",
            "type": "string",
          },
          "status": {
            "description": "Current status of the task: pending, in_progress, completed, cancelled",
            "type": "string",
          },
        },
        "required": [
          "content",
          "status",
          "priority",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "todos",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) webfetch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "format": {
      "default": "markdown",
      "description": "The format to return the content in (text, markdown, or html). Defaults to markdown.",
      "enum": [
        "text",
        "markdown",
        "html",
      ],
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in seconds (max 120)",
      "type": "number",
    },
    "url": {
      "description": "The URL to fetch content from",
      "type": "string",
    },
  },
  "required": [
    "url",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) websearch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "contextMaxCharacters": {
      "description": "Maximum characters for context string optimized for LLMs (default: 10000)",
      "type": "number",
    },
    "livecrawl": {
      "description": "Live crawl mode - 'fallback': use live crawling as backup if cached content unavailable, 'preferred': prioritize live crawling (default: 'fallback')",
      "enum": [
        "fallback",
        "preferred",
      ],
      "type": "string",
    },
    "numResults": {
      "description": "Number of search results to return (default: 8)",
      "type": "number",
    },
    "query": {
      "description": "Websearch query",
      "type": "string",
    },
    "type": {
      "description": "Search type - 'auto': balanced search (default), 'fast': quick results, 'deep': comprehensive search",
      "enum": [
        "auto",
        "fast",
        "deep",
      ],
      "type": "string",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "content": {
      "description": "The content to write to the file",
      "type": "string",
    },
    "filePath": {
      "description": "The absolute path to the file to write (must be absolute, not relative)",
      "type": "string",
    },
  },
  "required": [
    "content",
    "filePath",
  ],
  "type": "object",
}
`;
